tests/ui/const-generics/adt_const_params/const_param_ty_bad_empty_array.stderr
error[E0277]: `NotParam` can't be used as a const parameter type
  --> $DIR/const_param_ty_bad_empty_array.rs:10:13
   |
LL |     check::<[NotParam; 0]>();
   |             ^^^^^^^^^^^^^ the trait `ConstParamTy` is not implemented for `NotParam`
   |
   = note: required for `[NotParam; 0]` to implement `ConstParamTy`
note: required by a bound in `check`
  --> $DIR/const_param_ty_bad_empty_array.rs:7:13
   |
LL | fn check<T: std::marker::ConstParamTy>() {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
